Closed Bug 377331 Opened 19 years ago Closed 19 years ago

Aqua textareas should not have gfx shadow

Categories

(Core :: Widget: Cocoa, defect)

PowerPC
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.9alpha5

People

(Reporter: alqahira, Assigned: jaas)

References

Details

(Keywords: regression)

Attachments

(3 files)

Attached file simple testcase
In bug 298111, smfr explicitly changed the way <textarea>s were drawn to make them appear more properly Aqua. Specifically, he got rid of the internal shadow (single-line text fields have the shadow on Mac OS X; multi-line fields do not; see bug 298111 comment 4 and bug 298111 comment 14). (He also tweaked the padding, which ended up a bit too tight; however, this has now regressed also and needs to be tweaked again.)
Flags: blocking1.9+
Target Milestone: --- → mozilla1.9alpha5
Attached patch fix v1.0Splinter Review
Gecko native themes don't currently differentiate between single-line and multi-line text fields so I added that differentiation. Also, because HITheme doesn't have a way to draw multiline text fields (wtf?) I had to draw it "by hand," which isn't too bad because it is very simple.
Attachment #263880 - Flags: review?(stuart.morgan)
Attachment #263880 - Flags: review?(stuart.morgan) → review+
Attachment #263880 - Flags: superreview?(pavlov)
Attachment #263880 - Flags: superreview?(pavlov) → superreview?(roc)
Attachment #263880 - Flags: superreview?(roc) → superreview+
"fix v1.0" (attachment 263880 [details] [diff] [review]) compiles fine for me on Windows.
fixed on trunk
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: