Differentiate between single line and multiline text fields/areas so that we can render them differently. On Mac OS X render multiline text areas as Aqua text areas. b=377331 r=smorgan sr=roc